--- a/microservices/database-manager/src/test/resources/application.yml
+++ b/microservices/database-manager/src/test/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
-  # Test Database
+  # Test Database : should be linked to a DOCKER empty ne4j instance
+  # docker command to run :
+  # docker run \
+  # --publish=7474:7474 --publish=7687:7687 \
+  # --name neo4jTestDatabase neo4j:latest
   neo4j:
     uri: bolt://localhost:7687
