[database-manager-service] 🐳 dockerized the service

--- a/microservices/database-manager/src/test/resources/application.yml
+++ b/microservices/database-manager/src/test/resources/application.yml
@@ -3,6 +3,9 @@ spring:
   # docker command to run :
   # docker run \
   # --publish=7474:7474 --publish=7687:7687 \
+  # --env=NEO4J_AUTH=none \
+  # --volume=$HOME/neo4j/data:/data \
   # --name neo4jTestDatabase neo4j:latest
+  #
   neo4j:
     uri: bolt://localhost:7687
