--- a/microservices/authentification/pom.xml
+++ b/microservices/authentification/pom.xml
@@ -13,9 +13,10 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>authentification</name>
     <description>authentification</description>
-    <properties>
+    <!--<properties>
         <java.version>15</java.version>
-    </properties>
+
+    </properties> -->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -29,7 +30,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <!--<version>42.2.18</version> -->
         </dependency>
 
     </dependencies>
@@ -62,16 +62,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
+
             </plugin>
         </plugins>
+
     </build>
 
 </project>
