--- a/microservices/authentification/src/main/resources/application.yml
+++ b/microservices/authentification/src/main/resources/application.yml
@@ -3,14 +3,16 @@ server:
     include-message: always
     include-binding-errors: always
 
+
 spring:
   datasource:
     password: oumaima
     url: jdbc:postgresql://localhost:5432/registration
     username: postgres
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
