--- a/microservices/authentification/pom.xml
+++ b/microservices/authentification/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>postgresql</artifactId>
             <!--<version>42.2.18</version> -->
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>4.0.1</version>
+        </dependency>
 
     </dependencies>
 
