--- a/microservices/database-manager/pom.xml
+++ b/microservices/database-manager/pom.xml
@@ -40,6 +40,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+
 
 
 	</dependencies>
