--- a/microservices/resource-manager/src/main/resources/application.yml
+++ b/microservices/resource-manager/src/main/resources/application.yml
@@ -1,2 +1,14 @@
 server:
   port: 8080
+
+spring:
+  application:
+    name: resource-manager
+  cloud:
+    discovery:
+      enabled: true
+eureka:
+  client:
+    service:
+      url:
+        defaultZone: http://localhost:8761/eureka
