--- a/microservices/database-manager/src/main/resources/application.yml
+++ b/microservices/database-manager/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     discovery:
       enabled: true
   application:
-    name: database-manager
+    name: metadata-db-manager
   neo4j:
     authentication:
       username: neo4j
