--- a/microservices/database-manager/src/main/resources/application.yml
+++ b/microservices/database-manager/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     discovery:
       enabled: true
   application:
-    name: metadata-db-manager
+    name: metadata-db-manager-service
   neo4j:
     authentication:
       username: neo4j
@@ -15,4 +15,4 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery-service:8761/eureka
