--- a/microservices/discovery-service/pom.xml
+++ b/microservices/discovery-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.nexhub</groupId>
     <artifactId>discovery-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>discovery-service</name>
     <description>discovery-service</description>
     <properties>
