--- a/microservices/gateway-service/pom.xml
+++ b/microservices/gateway-service/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.nexhub</groupId>
 	<artifactId>gateway-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>gateway-service</name>
 	<description>gateway-service</description>
 	<properties>
