--- a/microservices/resource-manager/docker-compose.yml
+++ b/microservices/resource-manager/docker-compose.yml
@@ -15,6 +15,7 @@ services:
 
   resource-service:
     image: resource-manager-service
+    container_name: resource-manager-service
     ports:
       - "8083:8083"
 
