--- a/microservices/resource-manager/docker-compose.yml
+++ b/microservices/resource-manager/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: quay.io/minio/minio:latest
     command: server --console-address ":9090" /data
     environment:
-      MINIO_ROOT_USER: minio
-      MINIO_ROOT_PASSWORD: miniominio
+      MINIO_ROOT_USER: ${MINIO_USERNAME}
+      MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD}
     volumes:
       - $HOME/minio/data:/data
     ports:
@@ -18,6 +18,9 @@ services:
     container_name: resource-manager-service
     ports:
       - "8083:8083"
+    environment:
+      MINIO_USERNAME: ${MINIO_USERNAME}
+      MINIO_PASSWORD: ${MINIO_PASSWORD}
 
   metadata-db-manager-service:
     container_name: metadata-db-manager-service
