--- a/microservices/authentification/docker-compose.yml
+++ b/microservices/authentification/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:latest
     restart: always
     environment:
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER: postgres
-      POSTGRES_DB: registration
+      POSTGRES_PASSWORD: ${AUTH_DB_PASSWORD}
+      POSTGRES_USER: ${AUTH_DB_USERNAME}
+      POSTGRES_DB: ${AUTH_DB_NAME}
     ports:
       - "5432:5432"
 
@@ -16,6 +16,11 @@ services:
     image: authentication-service
     ports:
       - "8081:8081"
+    environment:
+      AUTH_DB_NAME: ${AUTH_DB_NAME}
+      AUTH_DB_PASSWORD: ${AUTH_DB_PASSWORD}
+      AUTH_DB_USERNAME: ${AUTH_DB_USERNAME}
+
 
   metadata-db-manager-service:
     container_name: metadata-db-manager-service
