--- a/microservices/authentification/src/main/resources/application.yml
+++ b/microservices/authentification/src/main/resources/application.yml
@@ -17,9 +17,13 @@ spring:
   application:
     name: authentication-service
   datasource:
-    url: jdbc:postgresql://postgres-db:5432/registration
-    password: password
-    username: postgres
+#    url: jdbc:postgresql://postgres-db:5432/registration
+#    password: password
+#    username: postgres
+    url: jdbc:postgresql://postgres-db:5432/${AUTH_DB_NAME}
+    db_name: ${AUTH_DB_NAME}
+    password: ${AUTH_DB_PASSWORD}
+    username: ${AUTH_DB_USERNAME}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
