--- a/.github/workflows/nexhub-backend-cicd.yml
+++ b/.github/workflows/nexhub-backend-cicd.yml
@@ -74,7 +74,7 @@ jobs:
           image: schrodingdong/nexhub-authentication-service
           tags: latest
           registry: docker.io
-          dockerfile: ./authentication-service
+#          dockerfile: ./authentication-service
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -95,7 +95,7 @@ jobs:
           image: schrodingdong/nexhub-metadata-db-manager-service
           tags: latest
           registry: docker.io
-          dockerfile: ./metadata-db-manager-service
+#          dockerfile: ./metadata-db-manager-service
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -116,7 +116,7 @@ jobs:
           image: schrodingdong/nexhub-resource-manager-service
           tags: latest
           registry: docker.io
-          dockerfile: ./resource-manager-service
+#          dockerfile: ./resource-manager-service
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -137,7 +137,7 @@ jobs:
           image: schrodingdong/nexhub-gateway-service
           tags: latest
           registry: docker.io
-          dockerfile: ./gateway-service
+#          dockerfile: ./gateway-service
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -158,6 +158,6 @@ jobs:
           image: schrodingdong/nexhub-discovery-service
           tags: latest
           registry: docker.io
-          dockerfile: ./discovery-service
+#          dockerfile: ./discovery-service
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
