--- a/microservices/resource-manager/src/main/resources/application.yml
+++ b/microservices/resource-manager/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     allow-bean-definition-overriding: true
 
 minio:
-  url: http://minio-db:9000
+  url: ${MINIO_URL}
   username: ${MINIO_USERNAME}
   password: ${MINIO_PASSWORD}
 
