--- a/microservices/authentification/pom.xml
+++ b/microservices/authentification/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
             <version>4.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
